--- a/Layouts/SWCollectionViewLineLayout/Documentation/html/Classes/SWCollectionViewLineLayoutAttributes.html
+++ b/Layouts/SWCollectionViewLineLayout/Documentation/html/Classes/SWCollectionViewLineLayoutAttributes.html
@@ -27,6 +27,8 @@
 					<select id="jumpTo">
 	<option value="top">Jump To&#133;</option>
 	
+	<option value="overview">Overview</option>
+	
 	
 	
 	
@@ -53,6 +55,8 @@
 		<nav id="tocContainer" class="isShowingTOC">
 			<ul id="toc" role="tree">
 				
+<li role="treeitem"><span class="nodisclosure"></span><span class="sectionName"><a href="#overview">Overview</a></span></li>
+
 
 
 
@@ -106,6 +110,45 @@
 					
 					
 					
+					<div class="section section-overview">
+						<a title="Overview" name="overview"></a>
+						<h2 class="subtitle subtitle-overview">Overview</h2>
+						<p>A subclass of UICollectionViewLayoutAttributes that provides extra support
+for <a href="../Classes/SWCollectionViewLineLayout.html">SWCollectionViewLineLayout</a></p>
+
+<p><strong>Table 1</strong> Description of <a href="#//api/name/side">side</a> values</p>
+
+<table>
+<thead>
+<tr>
+<th>Constant                                        </th>
+<th> Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><code>SWCollectionViewLineLayoutAttributeSideLeft</code>   </td>
+<td> The item is on the left <a href="#//api/name/side">side</a> of the line</td>
+</tr>
+<tr>
+<td><code>SWCollectionViewLineLayoutAttributeSideRight</code>  </td>
+<td> The item is on the right <a href="#//api/name/side">side</a> of the line</td>
+</tr>
+<tr>
+<td><code>SWCollectionViewLineLayoutAttributeSideEither</code> </td>
+<td> The item is on one <a href="#//api/name/side">side</a> of the line, as determined by the layout</td>
+</tr>
+<tr>
+<td><code>SWCollectionViewLineLayoutAttributeSideBoth</code>   </td>
+<td> The item spans both sides of the line</td>
+</tr>
+</tbody>
+</table>
+
+					</div>
+					
+					
+					
 					
 					
 					<div class="section section-tasks">
@@ -120,7 +163,7 @@
 							<li>
 	<span class="tooltip">
 		<code><a href="#//api/name/side">&nbsp;&nbsp;side</a></code>
-		
+		<span class="tooltip"><p>The side the item is on.</p></span>
 	</span>
 	<span class="task-item-suffix">property</span>
 	
@@ -142,10 +185,35 @@
 	<h3 class="subsubtitle method-title">side</h3>
 	
 	
+	
+	<div class="method-subsection brief-description">
+		<p>The side the item is on.</p>
+	</div>		
+	
+    
 
 	<div class="method-subsection method-declaration"><code>@property (nonatomic) SWCollectionViewLineLayoutAttributeSide side</code></div>
 
     
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	<div class="method-subsection declared-in-section">
+		<h4 class="method-subtitle">Declared In</h4>
+		<code class="declared-in-ref">SWCollectionViewLineLayoutAttributes.h</code><br />
+	</div>				
+	
+	
 </div>
 						
 					</div>
